# PCAP-Parser-Intrusion-Detection

./: .gitignore  README.md  WIRESHARK_GUIDE.md  generate_mock_pcap.py  pyproject.toml  requirements.txt  services.json
docs/plans/: 2026-06-06-live-sniffing-upgrade.md  2026-06-06-network-analysis-tool.md  2026-06-06-ui-refinement-and-portscan-removal.md  2026-06-06-web-dashboard-ui.md
src/: __init__.py  analyzer.py  cli.py  web_ui.py
src/static/: app.js  index.html  style.css
tests/: __init__.py  test_analyzer.py  test_cli.py  test_web.py
