[project]
name = "pcap-ids-tool"
version = "0.1.0"
description = "A PCAP-Parser & Intrusion Detection Script"
requires-python = ">=3.12"
dependencies = [
    "scapy>=2.6.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "websockets>=12.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "httpx",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
